fix today overlapping datebox

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -248,7 +248,7 @@
         font-weight: 500;
         color: #4a4a4a;
         position: absolute;
-        top: 67px;
+        top: 77px;
         left: -34px;
       }
 
